Tru64/MPI port by Eric Wu (Monash University, AU). See doc/Readme.Tru64

--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,9 @@
+2001-07-11 Andras Varga
+
+	* omnetapp.cc omnetapp.h: Eric Wu's Tru64/MPI port.
+        Added new ini file option: [General]/parallel-system=. Its value
+        can be "PVM" or "MPI", defaults to "MPI".
+
 2001-02-27  Andras Varga
 
 	* ------ omnetpp-2.1 released ------
