--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,11 +1,16 @@
+2001-07-13 Andras Varga
+
+       	* cmsgheap.h coutvect.h cpacket.h ctopo.h: added/cleaned up DOC++
+        comments 
+
 2001-07-11 Andras Varga
 
-	* carray.h cgate.h cllist.h cpar.h cqueue.h csimul.h: cleaned up DOC++
-        comments 
+	* carray.h cgate.h cllist.h cpar.h cqueue.h csimul.h: added/cleaned up
+        DOC++ comments 
 
 2001-07-07 Andras Varga
 
-        * cmessage.h,cmodule.h,util.h: cleaned up DOC++ comments 
+        * cmessage.h,cmodule.h,util.h: added/cleaned up DOC++ comments 
 
 2001-07-02 Andras Varga
 
