--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,9 @@
+2001-07-23  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* parsened.cc (error): use macro CONST_CAST (defined at top of
+	file) to avoid compilation errors with gcc-2.95.3
+	* ebnf.y (addGate): CONST_CAST again
+
 2001-07-11  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* Makefile.vc (ebnf.tab.cc) (lex.yy.cc): use "copy" and "del" instead of "mv"
