--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2001-08-03 Andras Varga
+
+	* ccor.h cdetect.h cgate.h cmodule.h cobject.h cpar.h csimul.h cstk.h:
+        improved/added documentation comments
+
 2001-07-30  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* cenvir.h: operator<< definitions were broken. Introduced with
