--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,8 @@
+2001-08-06  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* cnetmod.cc (isLocalMachineIn): Compile-Fix: changed const to
+	_CONST in argument list.
+
 2001-08-05 Andras Varga
 
 	* added a few dozen new _CONSTs; affects nearly all files
