--- a/samples/nim/ChangeLog
+++ b/samples/nim/ChangeLog
@@ -1,3 +1,9 @@
+2001-08-06  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* players.h (class Player, SimplePlayer, SmartPlayer,
+	InteractivePlayer): increased stack size to 16384
+
+	* game.cc (class Game): increased stack size to 16384
 
 2001-03-10  Andras Varga
 
