--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,7 @@
+2001-08-11 Andras Varga
+
+	* added _CONSTs to all copy constructors, operator=()'s and dup()'s
+
 2001-08-06  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* cnetmod.cc (isLocalMachineIn): Compile-Fix: changed const to
