--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -1,3 +1,7 @@
+2001-08-30  Andras Varga
+
+	* cosmetic changes; Plove 2.1p1 win32 binary bugfix release
+
 2001-08-29  Andras Varga
 
 	* doplot.tcl rewritten to handle Windows better. Fixed bugs associated
