--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,7 @@
+2001-09-01 Andras Varga
+
+	* CONST_CAST() replaced by const_cast<>()
+
 2001-07-11 Andras Varga
 
 	* omnetapp.cc omnetapp.h: Eric Wu's Tru64/MPI port.
