--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,7 @@
+2001-09-01 Andras Varga
+
+	* CONST_CAST() replaced by const_cast<>()
+
 2001-07-23  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* tkcmd.cc (simulationOk_cmd): use macro CONST_CAST (defined at top of
