--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-06 Andras Varga
+
+	* findrepl.tcl: regexp replace improved (\1,\2 in replace string now work
+        as expected)
+
 2001-09-01 Andras Varga
 
 	* CONST_CAST() replaced by const_cast<>()
