--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-25  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* cqueue.cc (operator=): Bugfix for stop condition in iteration
+	loop
+
 2001-09-14 Andras Varga
 
 	* utils.cc: added opp_nextrand(long& seed)
