--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-21  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* cqueue.h (cQueue): fixed CompareFunc arguments in Queue class description
+
 2001-10-28 Andras Varga
 
 	* util.h: opp_string::allocate(), opp_strprettytrunc() added; 
