exitcode-related fixes, etc.

--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -4,7 +4,7 @@
         existing ones, removed %name from test file syntax; now test name
         is derived from the file name. Cleaned up error handling.
         Changed some command-line switches. Introduced {} as synonim for 
-        @TESTNAME@.
+        @TESTNAME@. Improved reporting.
 
         * runtest: accepts command-line args
 
