--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-24  Andras Varga
+
+	* cmodule.cc: bugfix: pause() was allowed for handleMessage() modules
+        too.
+
 2002-02-22  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* cllist.cc (operator=): Same bugs as with cQueue (see items
